test/visibility/rename/renameUsedMod/renameSameNameEnumInScopeQualified.good
renameSameNameEnumInScopeQualified.chpl:9: In function 'main':
renameSameNameEnumInScopeQualified.chpl:10: error: unresolved enumerated type symbol or call 'type L.x'
renameSameNameEnumInScopeQualified.chpl:10: note: because no functions named x found in scope
